# keryxis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml
config/: default.toml
docs/superpowers/designs/: 2026-03-22-daemon-control-ui.md
docs/superpowers/plans/: 2026-03-14-daemon-overlay.md  2026-03-21-model-loading-progress.md  2026-03-22-daemon-control-ui.md
docs/superpowers/specs/: 2026-03-14-daemon-overlay-design.md
src/: lib.rs  main.rs  state.rs
src/audio/: capture.rs  mod.rs  vad.rs
src/config/: settings.rs
src/daemon/: lifecycle.rs  mod.rs  socket.rs
src/injection/: mod.rs  platform.rs
src/input/: hotkey.rs  mod.rs  wake_word.rs
src/recognition/: mod.rs  whisper.rs
src/ui/: active_window.rs  mod.rs  overlay.rs
tests/: active_window_tests.rs  audio_capture_tests.rs  config_tests.rs  daemon_tests.rs  hotkey_tests.rs  recognition_tests.rs  state_tests.rs  vad_tests.rs  wake_word_tests.rs
