[package]
name = "keryxis"
version = "0.1.0"
edition = "2021"
description = "Keryxis — speech-to-text herald for any application"
license = "MIT"

[dependencies]
# Audio capture
cpal = "0.15"

# Speech recognition (whisper.cpp bindings)
whisper-rs = "0.14"

# Global hotkey listener (macOS + Linux/Wayland)
rdev = "0.5"

# Text injection (cross-platform keyboard simulation)
enigo = "0.3"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"

# System calls
libc = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# GUI overlay (behind feature flag)
eframe = { version = "0.31", optional = true, default-features = false, features = ["default_fonts", "wgpu"] }
egui = { version = "0.31", optional = true }

[features]
default = ["metal", "gui"]
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda"]
gui = ["dep:eframe", "dep:egui"]
